# grounded_sam_ros2_pkg

./: .gitignore  .gitmodules  CLAUDE.md  README.md  REFACTORING.md  launch_env.bash  vgn_architecture_note.md  vgn_plan_final.md  vgn_retrain_considerations.md
docs/: pipeline_interface.md
src/grounded_sam_pkg/: README.md  package.xml  setup.cfg  setup.py
src/grounded_sam_pkg/config/: model_paths.yaml  runtime.yaml
src/grounded_sam_pkg/grounded_sam_pkg/: gdino_runner.py  pipeline.py  postprocess.py  prompt_adapter.py  qwen_stub_node.py  ros_node.py  sam_runner.py  test_image_pub.py  visualizer.py
src/grounded_sam_pkg/launch/: grounded_sam.launch.py  test_inference.launch.py
src/grounded_sam_pkg/scripts/: run_inference.py
src/mask_projection_pkg/: CLAUDE.md  README.md  package.xml  setup.cfg  setup.py
src/mask_projection_pkg/config/: camera_extrinsics.yaml
src/mask_projection_pkg/launch/: mask_projector.launch.py  multi_view_projector.launch.py
src/mask_projection_pkg/mask_projection_pkg/: back_projection.py  cloud_builder.py  label_mapper.py  multi_view_projector_node.py  ply_utils.py  projection_engine.py  projector_node.py  static_projector.py
src/rgbd_projection/: CMakeLists.txt  package.xml
src/rgbd_projection/launch/: rgbd_sim.launch.py
src/rgbd_projection/rviz/: rgbd.rviz
src/rgbd_projection/scripts/: save_rgbd_snapshot.py
src/rgbd_projection/worlds/: rgbd_world.sdf  sensors_demo.sdf
src/vgn_grasp_pkg/: README.md  package.xml  setup.cfg  setup.py
src/vgn_grasp_pkg/config/: vgn_params.yaml
src/vgn_grasp_pkg/launch/: full_pipeline.launch.py  vgn_grasp.launch.py
src/vgn_grasp_pkg/rviz/: grasp_demo.rviz
src/vgn_grasp_pkg/vgn_grasp_pkg/: depth_utils.py  tsdf_builder.py  vgn_grasp_node.py  vgn_inference.py
tools/: publish_test_image.py
