<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rgbd_projection</name>
  <version>0.1.0</version>
  <description>
    Minimal RGB-D simulation and projection pipeline learning package.
    Provides a Gazebo world with an RGBD camera and launch files to bridge
    image/depth/camera_info/points topics into ROS 2.
  </description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime deps: simulation + bridge + visualization -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
